# estimator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINAL_CHECKLIST.md  FIXES_SUMMARY.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  READY_TO_PUBLISH.md  TESTING_AND_PUBLISHING.md  fix_code_style.py  pyproject.toml  test_all.py
.github/workflows/: ci.yml
edge_estimators/: __init__.py
edge_estimators/backend/: __init__.py  base.py  jax_backend.py  numpy_backend.py
edge_estimators/core/: __init__.py  covariance.py  estimator.py  exceptions.py  state.py  time.py
edge_estimators/gating/: __init__.py  mahalanobis.py
edge_estimators/models/: __init__.py
edge_estimators/models/measurement/: __init__.py  base.py  encoder.py  gps.py  imu.py  magnetometer.py
edge_estimators/models/process/: __init__.py  base.py  constant_acceleration.py  constant_velocity.py  imu_kinematics.py
edge_estimators/noise/: __init__.py  adaptive.py  static.py
edge_estimators/utils/: __init__.py  checks.py  linalg.py  logging.py  timers.py
estimator/: __init__.py
estimator/backend/: __init__.py  base.py  jax_backend.py  numpy_backend.py
estimator/core/: __init__.py  covariance.py  estimator.py  exceptions.py  state.py  time.py
estimator/gating/: __init__.py  mahalanobis.py
estimator/models/: __init__.py
estimator/models/measurement/: __init__.py  base.py  encoder.py  gps.py  imu.py  magnetometer.py
estimator/models/process/: __init__.py  base.py  constant_acceleration.py  constant_velocity.py  imu_kinematics.py
estimator/noise/: __init__.py  adaptive.py  static.py
estimator/utils/: __init__.py  checks.py  linalg.py  logging.py
examples/: async_sensor_demo.py  imu_encoder_sim.py  rpi_imu_encoder.py
tests/: __init__.py  test_async_sensors.py  test_convergence.py  test_dropout.py  test_stability.py
