[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "estimator"
dynamic = ["version"]
description = "Production-focused state estimation runtime for edge devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ankit karki"}
]
keywords = ["kalman-filter", "state-estimation", "robotics", "sensor-fusion", "ekf", "ukf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Ankit-x1/estimator"
Documentation = "https://github.com/Ankit-x1/estimator"
Repository = "https://github.com/Ankit-x1/estimator"
Issues = "https://github.com/Ankit-x1/estimator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["estimator*"]

[tool.setuptools.dynamic]
version = {attr = "estimator.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long (handled by black)
    "E741",  # Ambiguous variable name - allow 'I' for identity matrix (standard math notation)
    "N806",  # Variable should be lowercase - allow uppercase for mathematical notation (P, H, R, S, K, Q, F)
    "N803",  # Argument should be lowercase - allow uppercase for mathematical notation
    "N802",  # Function name should be lowercase - allow for API consistency (get_Q, get_R, adapt_R, etc.)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are often intentional

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "jax.*"
ignore_missing_imports = true


